continuous layout bug fixing

--- a/source/sass/partials/feedback-fixed/_fixed-feedback-continuous.scss
+++ b/source/sass/partials/feedback-fixed/_fixed-feedback-continuous.scss
@@ -1,11 +1,12 @@
 .feedback__continuous__container {
   border: 1px solid $default-border-color;
-  //@extend %feedback-container-margin-bottom;
   margin-bottom: -10px;
 }
+
 .feedback__continuous__emo-list {
   display: table;
   width: 100%;
+  border-collapse: collapse;
   .feedback__continuous__emo-list__table-row {
     display: table-row;
     &:last-of-type {
@@ -24,7 +25,11 @@
   .feedback__continuous__emo-list__item {
     display: table-cell;
     vertical-align: middle;
-    padding: 15px 0;
+    padding: 5px 0;
+    .feedback__item-label {
+      margin-left: -5px;
+      margin-right: -5px;
+    }
   }
   .feedback__continuous__emo-list__description {
     p {
@@ -34,24 +39,16 @@
   }
 }
 
-.feedback__continuous__shapes-list__items-container {
-  display: table;
-  table-layout: fixed;
-  float: right;
-}
 .feedback__continuous__shapes-list__item {
-  display: table-cell;
-  @extend %shape-col-minwidth;
-  padding-left: 2px;
-  padding-right: 2px;
   vertical-align: middle;
   text-align: center;
   position: relative;
+  margin: 0 auto;
+  display: block;
   .icomoon-sudo {
     display: none;
   }
   @media (min-width: 768px) and (max-width: 991px) {
-    min-width: 30px;
     padding-left: 1px;
     padding-right: 1px;
   }
@@ -96,35 +93,30 @@
     border: 0 none;
   }
   .feedback__continuous__emo-list {
-    display: block;
-    .feedback__continuous__emo-list__table-row,
-    .feedback__continuous__emo-list__item {
-      display: block;
-    }
     .feedback__continuous__emo-list__table-row {
+      display: block;
       border: 1px solid $default-border-color;
       margin-bottom: 15px;
     }
     .feedback__continuous__emo-list__item {
       border: 0 none;
+      .feedback__item-label {
+        margin-left: 0;
+        margin-right: 0;
+      }
     }
     .feedback__continuous__emo-list__description {
       padding: 7px 5px;
       background: $default-background-light;
+      display: block;
       .feedback__continuous__emo-list__description-count {
         text-align: initial;
       }
     }
   }
-  .feedback__continuous__shapes-list__items-container {
-    float: none;
-    display: block;
-    overflow: hidden;
-  }
   .feedback__continuous__shapes-list__item {
     max-width: none;
     min-width: unset;
-    //width: 1%;
     overflow: hidden;
     padding-left: 1px;
     padding-right: 1px;
@@ -144,7 +136,6 @@
   }
   .feedback__continuous__emo-list {
     .feedback__continuous__emo-list__item {
-      border: 0 none;
       padding: 10px 0;
     }
   }
